# nexus-seeker

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Dockerfile.test  GEMINI.md  README.md  bot.py  config.py  database.py  docker-compose.yml  main.py  market_math.py  market_time.py  repro_theta.py  requirements.txt  test_embed_limit.py  test_macro.py  verify_id_14.py
nexus_core/: .env.example  Dockerfile  bot.py  bot_healthy.py  cli.py  config.py  docker-compose.yml  entrypoint.sh  gather_report.py  main.py  market_math.py  market_time.py  pyproject.toml  requirements.txt  test_active_markets.py  verify_stat1.py
nexus_core/cogs/: analyst_agent.py  calendar.py  cc_recovery.py  debug.py  embed_builder.py  hedging.py  intelligence.py  order_modals.py  order_ui.py  order_views.py  portfolio.py  pro_investor.py  research.py  sentiment.py  settings_ui.py  terminal.py  trading.py  unified_terminal.py  watchlist.py
nexus_core/data/: nexus_data.db
nexus_core/database/: __init__.py  cache.py  calendar_cache.py  connection.py  core.py  financials.py  holdings.py  leader_lock.py  market_cache.py  notifications.py  orders.py  portfolio.py  squeeze_cache.py  user_settings.py  virtual_trading.py  watchlist.py  watchlist_tags.py
nexus_core/formatters/: execution_embeds.py
nexus_core/market_analysis/: __init__.py  attribution.py  dark_pool_engine.py  data.py  ddp_inspector.py  gamma_squeeze_engine.py  gap_analysis.py  ghost_trader.py  greeks.py  hedging.py  index_microstructure.py  insight_generator.py  insights_engine.py  intraday_pipeline.py  margin.py  option_guidance.py  portfolio.py  pro_management.py  psq_engine.py  report_formatter.py  risk_engine.py  sentiment_engine.py  signal_calculator.py  squeeze_engine.py  strategy.py  (+5 more)
nexus_edge_scraper/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  local_api.py  pyproject.toml  requirements.txt
(+259 files in other folders)
