[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-edge-scraper"
version = "0.1.0"
description = "Nexus Seeker Edge Scraper Service"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "playwright",
    "beautifulsoup4",
    "lxml",
]
